compute_instances.tf
resource "google_compute_disk" "default" {
  count = "${var.count_vms}"
  name = "${var.environment}-disk-${count.index + 1}"
  type = "pd-ssd"
  zone = "${var.zone}"
  size = "${var.disk_default_size}"
}

resource "google_compute_instance" "web" {
  count        = "${var.count_vms}"
  name         = "${var.environment}-${format("web-%03d", count.index + 1)}"
  machine_type = "${var.default_machine_type}"
  zone         = "${var.zone}"

  tags = ["web"]

  boot_disk {
    initialize_params {
      image = "centos-cloud/centos-7"
    }
  }
/**
  attached_disk {
    source = "${google_compute_disk.default.self_link}"
  }
**/
  attached_disk {
    source = "${element(google_compute_disk.default.*.name, count.index)}"
  }

  network_interface {
    network = "${google_compute_network.web.name}"

    access_config {
      // Ephemeral IP
    }
  }

  metadata {
    role = "web"
  }

  metadata_startup_script = "yum update -y && yum install -y yum-utils device-mapper-persistent-data lvm2 wget ansible unzip git && yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo && yum makecache fast && yum -y install docker-ce && systemctl stop firewalld && systemctl disable firewalld && gpasswd -a ${var.default_user_name} docker && systemctl start docker && systemctl enable docker && curl -L https://github.com/docker/compose/releases/download/1.23.0-rc3/ [...]

  service_account {
    scopes = ["userinfo-email", "compute-ro", "storage-ro"]
  }
}

output "public_ip" {
  value = "add your ssh key to ~/.ssh/authorized_keys of the ${var.default_user_name} user post connecting to vm ${google_compute_instance.web.0.name}  and public ip connection would be enabled via ssh -i privatekey ${var.default_user_name}@${google_compute_instance.web.0.network_interface.0.access_config.0.assigned_nat_ip}"
}

output "connect_vm" {
  value = "gcloud compute ssh ${google_compute_instance.web.0.name} --zone ${var.zone}"
}
output "startup_script_check" {
  value = "sudo tail -100f /var/log/messages"
}
